name:                data-structure-http

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- https://wiki.haskell.org/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              vosmann
maintainer:          xxx
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable data-structure-http
  main-is:             Main.hs
  other-extensions:    OverloadedStrings
  build-depends:       base >=4.6 && <4.7,
                       scotty >= 0.11.0,
                       mtl,
                       text
  default-language:    Haskell2010
