name:                data-structure-http

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- https://wiki.haskell.org/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              vosmann
maintainer:          xxx
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable data-structure-http
  main-is:             Main.hs
  other-extensions:    OverloadedStrings
  build-depends:       base >=4.6 && <4.7,
                       mtl >=2.2.1,
                       bytestring >= 0.10.8.1,
                       conduit >= 1.2.8,
                       http-types,
                       network >= 2.6.3.1,
                       network-uri >= 2.6.1.0,
                       wai >= 3.2.1.1,
                       warp >= 3.2.8


-- aeson >= 0.11
-- containers >= 0.5.7
-- unordered-containers >= 0.2.7.1
-- http-conduit >= 2.1
-- iproute >= 1.7
-- logging >= 3.0.4
-- memory >= 0.13
-- text >= 1.2.2.1,
-- bytestring >= 0.10.8,
-- utf8-string >= 1.0.1.1,

--                       conduit >= 0.2.2,
--                       resourcet >= 1.1.9,
--                       http-types >= 0.9.1,
--                       warp >=3.2,
--                       wai >=3.2
--                       warp >=2.0 && <2.2,
--                       wai >=2.0 && <2.2


  default-language:    Haskell2010
